--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -36,7 +36,7 @@
             </li>
             <li>
                 <a th:href="@{/chatbot}">
-                    <i class="fas fa-comments me-2"></i> Arth (Chat with me)
+                    <i class="fas fa-comments me-2"></i> Arth (AI Assistant)
                 </a>
             </li>
             <li>
