--- a/src/main/resources/templates/edit_finance.html
+++ b/src/main/resources/templates/edit_finance.html
@@ -11,11 +11,12 @@
     <!-- Custom CSS for Edit Finance page -->
     <link rel="stylesheet" href="/css/edit_finance.css">
     <link rel="stylesheet" th:href="@{/css/styles.css}">
+    <link rel="stylesheet" th:href="@{/css/menu.css}">
 </head>
 <body>
 <div class="wrapper">
     <!-- Include the Finance Sidebar Menu -->
-    <div th:replace="~{fragments/finance_menu :: menu}"></div>
+    <div th:replace="~{fragments/menu :: menu}"></div>
 
     <!-- Header Section -->
     <header class="header">
@@ -179,6 +180,7 @@
         })
     })()
 </script>
+
 </body>
 </html>
 
