--- a/src/main/resources/templates/finance_dashboard.html
+++ b/src/main/resources/templates/finance_dashboard.html
@@ -9,14 +9,21 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-..." crossorigin="anonymous">
     <!-- FontAwesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <!-- FontAwesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/css/finance_dashboard.css">
     <link rel="stylesheet" th:href="@{/css/styles.css}">
+    <link rel="stylesheet" th:href="@{/css/menu.css}">
 </head>
 <body>
 <div class="wrapper">
     <!-- Include the Finance Sidebar Menu -->
-    <div th:replace="~{fragments/finance_menu :: menu}"></div>
+    <div th:replace="~{fragments/menu :: menu}"></div>
 
     <!-- Header Section -->
     <header class="header">
@@ -182,5 +189,6 @@
       });
     });
 </script>
+
 </body>
 </html>
